--- a/Selkie.Services.Aco/Selkie.Services.Aco.csproj
+++ b/Selkie.Services.Aco/Selkie.Services.Aco.csproj
@@ -66,40 +66,41 @@
       <HintPath>..\packages\RabbitMQ.Client.3.5.3\lib\net40\RabbitMQ.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Aco.Anthill, Version=0.6.277.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Aco.0.6.277.0\lib\net45\Selkie.Aco.Anthill.dll</HintPath>
+    <Reference Include="Selkie.Aco.Anthill, Version=0.6.288.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Aco.0.6.288.0\lib\net45\Selkie.Aco.Anthill.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Aco.Ants, Version=0.6.277.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Aco.0.6.277.0\lib\net45\Selkie.Aco.Ants.dll</HintPath>
+    <Reference Include="Selkie.Aco.Ants, Version=0.6.288.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Aco.0.6.288.0\lib\net45\Selkie.Aco.Ants.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Aco.Common, Version=0.6.277.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Aco.0.6.277.0\lib\net45\Selkie.Aco.Common.dll</HintPath>
+    <Reference Include="Selkie.Aco.Common, Version=0.6.288.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Aco.0.6.288.0\lib\net45\Selkie.Aco.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Aco.Trails, Version=0.6.277.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Aco.0.6.277.0\lib\net45\Selkie.Aco.Trails.dll</HintPath>
+    <Reference Include="Selkie.Aco.Trails, Version=0.6.288.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Aco.0.6.288.0\lib\net45\Selkie.Aco.Trails.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Common, Version=0.6.166.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Common.0.6.166.0\lib\net45\Selkie.Common.dll</HintPath>
+    <Reference Include="Selkie.Common, Version=0.6.172.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Common.0.6.172.0\lib\net45\Selkie.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.EasyNetQ, Version=0.6.144.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.EasyNetQ.0.6.144.0\lib\net45\Selkie.EasyNetQ.dll</HintPath>
+    <Reference Include="Selkie.EasyNetQ, Version=0.6.162.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.EasyNetQ.0.6.162.0\lib\net45\Selkie.EasyNetQ.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Selkie.Services.Aco.Common, Version=0.6.8.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selkie.Services.Aco.Common.0.6.8.0\lib\net45\Selkie.Services.Aco.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Services.Common, Version=0.6.108.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selkie.Services.Common.0.6.108.0\lib\net45\Selkie.Services.Common.dll</HintPath>
+    <Reference Include="Selkie.Services.Common, Version=0.6.126.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Services.Common.0.6.126.0\lib\net45\Selkie.Services.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Selkie.Windsor">
-      <HintPath>..\packages\Selkie.Windsor.0.6.220.0\lib\net45\Selkie.Windsor.dll</HintPath>
+    <Reference Include="Selkie.Windsor, Version=0.6.224.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selkie.Windsor.0.6.224.0\lib\net45\Selkie.Windsor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -110,16 +111,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Handlers\ICreateColonyHandler.cs" />
-    <Compile Include="Handlers\IPheromonesRequestHandler.cs" />
-    <Compile Include="Handlers\IStartHandler.cs" />
-    <Compile Include="Handlers\IStopRequestHandler.cs" />
     <Compile Include="Handlers\StartHandler.cs" />
     <Compile Include="IAcoService.cs" />
     <Compile Include="ServiceColony.cs" />
     <Compile Include="ServiceColonyParameters.cs" />
     <Compile Include="ColonySourceManager.cs" />
-    <Compile Include="Handlers\BaseHandler.cs" />
     <Compile Include="Handlers\CreateColonyHandler.cs" />
     <Compile Include="Handlers\PheromonesRequestHandler.cs" />
     <Compile Include="Handlers\StopRequestHandler.cs" />
