--- a/Selkie.Services.Aco.Tests/app.config
+++ b/Selkie.Services.Aco.Tests/app.config
@@ -13,15 +13,27 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="RabbitMQ.Client" publicKeyToken="89e7d7c5feba84ce" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.3.0" newVersion="3.5.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.4.0" newVersion="3.5.4.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.31.3.0" newVersion="3.31.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture.Xunit" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.31.0.0" newVersion="3.31.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture.AutoNSubstitute" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.31.1.0" newVersion="3.31.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
